Restructured code